# sevendayshpc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conclusion.md  html.mk  index.html  makefile  template.html
conclusion/: README.md  index.html
day1/: CMakeLists.txt  README.md  gdb_mpi.cpp  hello.cpp  index.html  rank.cpp  rank_stream.cpp
day1/fig/: fig.pptx
day2/: README.md  index.html
day2/fig/: fig.pptx
day3/: CMakeLists.txt  README.md  calc_pi.cpp  calc_pi_mpi.cpp  calc_pi_reduce.cpp  index.html  processfiles.cpp
day3/fig/: fig.pptx
day4/: .gitignore  CMakeLists.txt  README.md  fixed.plt  gather.cpp  index.html  thermal.cpp  thermal_mpi.cpp  uniform.plt
day4/fig/: fig.pptx
day5/: .gitignore  CMakeLists.txt  README.md  gather2d.cpp  gs.cpp  gs_mpi.cpp  image.rb  index.html  makefile  sendrecv.cpp
day5/fig/: fig.pptx
day6/: .gitignore  CMakeLists.txt  README.md  gs.cpp  gs_hybrid.cpp  gs_omp1.cpp  gs_omp1.perf  gs_omp2.cpp  gs_omp2.perf  index.html  makefile  multi.plt  result.txt  single.plt  vmem.cpp
day6/fig/: fig.pptx
day7/: .gitignore  CMakeLists.txt  README.md  add.cpp  add1.cpp  func.cpp  func_simd.cpp  index.html  load.cpp  loadasm.cpp  makefile  mul.cpp  print.cpp  setpd.cpp  simdcheck.cpp
day7/fig/: fig.pptx
day7/magnetic/: energy.plt  mag.cpp  mag_simd.cpp  mag_soa.cpp  makefile
postface/: index.html
preface/: README.md  index.html
review/: .gitignore  Gemfile  Rakefile  catalog.yml  catalog.yml.orig  config-starter.yml  config.yml  locale.yml  makefile  post.rb  pre.rb  review-ext.rb  style.css
review/css/: webstyle.css
review/layouts/: layout.html5.erb  layout.tex.erb
review/lib/hooks/: beforetexcompile.rb  monkeypatch.rb
review/lib/ruby/: review-pdfmaker.rb
review/lib/tasks/: mytasks.rake  review.rake  starter.rake
review/sty/: mycolophon.sty  mystyle.sty  mytextsize.sty  mytitlepage.sty  reviewmacro.sty  starter.sty
